fix: custom scrollbar margin & table style (#137)

--- a/src/components/Dropdown/style/Dropdown.scss
+++ b/src/components/Dropdown/style/Dropdown.scss
@@ -25,7 +25,8 @@ $cls: #{$prefix}-#{$component};
     border: none;
     border-radius: 0;
 
-    &, * {
+    &,
+    * {
       &::-webkit-scrollbar {
         width: 2px;
       }
@@ -33,8 +34,16 @@ $cls: #{$prefix}-#{$component};
       &::-webkit-scrollbar-thumb {
         max-width: 100%;
         max-height: 100%;
-        background-color: $color-grey-dark;
+        background-color: transparent;
         border-radius: 2px;
+      }
+
+      &::-webkit-scrollbar-track {
+        margin: 2px 0;
+      }
+
+      &:hover::-webkit-scrollbar-thumb {
+        background-color: $color-grey-dark;
       }
     }
   }
